[package]
name = "globals_macro"
version = "0.0.1"
edition = "2024"
description = "Effortless thread-safe global variables"
license = "MIT"
repository = "https://github.com/Stuntlover-TM/globals-macro"
keywords = ["global", "macro", "thread-safe", "singleton"]
categories = ["concurrency", "macros"]

[dependencies]
once_cell = "1.21.1"
parking_lot = "0.12.3"